# plane_segmentation_ros2

./: README.md
cgal5_catkin/: CMakeLists.txt  package.xml
cgal5_catkin/cmake/: cgal-extras.cmake.in
convex_plane_decomposition/: CMakeLists.txt  package.xml
convex_plane_decomposition_msgs/: CMakeLists.txt  package.xml
convex_plane_decomposition_ros/: CMakeLists.txt  package.xml
convex_plane_decomposition_ros/config/: demo_node.yaml  node.yaml  parameters.yaml
convex_plane_decomposition_ros/include/convex_plane_decomposition_ros/: ConvexPlaneDecompositionRos.h  MessageConversion.h  ParameterLoading.h  RosVisualizations.h
convex_plane_decomposition_ros/launch/: convex_plane_decomposition.launch.py  demo.launch.py  save_elevation_map.launch.py
convex_plane_decomposition_ros/rviz/: config_demo.rviz
convex_plane_decomposition_ros/src/: ConvexApproximationDemoNode.cpp  ConvexPlaneDecompositionNode.cpp  ConvexPlaneDecompositionRos.cpp  MessageConversion.cpp  ParameterLoading.cpp  RosVisualizations.cpp  SaveElevationMapAsImageNode.cpp  noiseNode.cpp
grid_map_filters_rsl/: CMakeLists.txt
